--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <h2>T - Total Depravity (Depravação Total)</h2>
 <p>Toda a humanidade foi afetada, danificada e distorcida pela entrada do pecado no mundo. Isso não significa que o homem seja tão ruim quanto poderia ser, mas que todos os aspectos de nossa vida são afetados pelo pecado, de modo que estamos mortos em nossas transgressões e pecados (Ef 2.5), e nós mesmos não podemos mudar a nossa situação (Cl 2.13).
-
+    
     Os Cânones de Dort nos dizem: “Portanto, todos os homens são concebidos no pecado, e ao nascer como filhos da ira, incapazes de qualquer bem são ou salvífico, e inclinados ao mal, mortos em pecados e escravos do pecado; e eles não querem e nem podem voltar a Deus, nem corrigir sua natureza corrompida, e nem melhorá-la por si mesmos, sem a graça do Espírito Santo, que é aquele que regenera” (Cânone de Dort, capítulo 3-4, IIL).
     
+
     As doutrinas do pecado e a depravação total do homem são mais do que bem representadas em ambos os testamentos (cf. Is 53.6; 2 Cr 6.36; Rm 3.9-12; 1Jo 1.8,10; Mc 10.18; Mq 7.2-4; Jr 17.9; Mt 15.19; Gn 6.5, 8.21).
 </p>
 
@@ -41,5 +42,10 @@
 
     “Quem Deus aceitou em seu Amado, e que foi efetivamente chamado e santificado pelo seu Espírito, não pode cair completa ou definitivamente do estado de graça, mas deve seguramente perseverar nele até o fim, e serão salvos eternamente… Esta perseverança dos santos não depende do seu livre arbítrio, mas da imutabilidade do decreto de eleição, que brota do amor livre e imutável de Deus Pai” (Confissão de Fé de Westminster, capítulo 17, I, II).</p>
 <body>
+
+<footer>
+    <p>made by victor</p>
+</footer>
+
 
 </html>
