--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
     
     Este é possivelmente um dos pontos mais esperançosos de toda a teologia cristã: pela sua poderosa graça, nós que fomos escolhidos seremos glorificados (Rm 8.29-30). Do mesmo modo, vemos o poder da graça em toda a Escritura (cf. Jo 6.37,44,65; Rm 11.7; 2Ts 13-14; 1Co 1.9; Gl 1.5).</p>
 <h2>P - Perseverance of the Saints (Perseverança dos Santos)</h2>
-<p>Os escolhidos — os verdadeiramente salvos — perseverarão até o fim. Outra grande e esperançosa verdade! Filipenses 1:6 nos diz: “Estou convencido precisamente disto: que aquele que começou a boa obra em vós a aperfeiçoará até o dia de Cristo Jesus”. Isto não se refere ao chamado “salvar sempre salvo”, que uma vez que somos escolhidos por Deus, podemos viver como quisermos. Pelo contrário, diz-nos que, na soberania de Deus, aqueles que Ele escolheu para a salvação sustentarão aquela confissão de conversão até à sua morte, perseverando na vida de santidade. Estas verdades estão presentes uma e outra vez na Bíblia (cf. Rm 8.35-39; 2Pe 1.10; Jo 10.28,29; 1Jo 3.9; 1Pe 1.5,9).
+<p>Os escolhidos — os verdadeiramente salvos — perseverarão até o fim. Outra grande e esperançosa verdade! Filipenses 1:6 nos diz: “Estou convencido precisamente disto: que aquele que começou a boa obra em vós a aperfeiçoará até o dia de Cristo Jesus”. Isto não se refere ao chamado “salvar sempre salvo”, que uma vez que somos escolhidos por Deus, podemos viver como quisermos. Pelo contrário, diz-nos que, na soberania de Deus, aqueles que Ele escolheu para a salvação sustentarão aquela confissão de conversão até à sua morte, perseverando na vida de santidade. Estas verdades estão presentes uma e outra vez na Bíblia (cf. Rm 8.35-39; 2Pe 1.10; Jo 10.28,29; 1Jo 3.9; 1Pe 1.5,9). 
 
     “Quem Deus aceitou em seu Amado, e que foi efetivamente chamado e santificado pelo seu Espírito, não pode cair completa ou definitivamente do estado de graça, mas deve seguramente perseverar nele até o fim, e serão salvos eternamente… Esta perseverança dos santos não depende do seu livre arbítrio, mas da imutabilidade do decreto de eleição, que brota do amor livre e imutável de Deus Pai” (Confissão de Fé de Westminster, capítulo 17, I, II).</p>
 <body>
 
 <footer>
     <p>made by victor</p>
+    <a href="https://github.com/victorhcunha">github</a>
 </footer>
 
 
