--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Os Cinco Pontos do Calvinismo</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
+    <img
+      src="https://images.squarespace-cdn.com/content/v1/5d310c35b7e018000101d7cd/1566409428850-UISYA9Z6UKMX1G6PC681/17.png?format=1500w"
+      alt="Sinodo de Dort"
+    />
     <h1>5 Pontos do Calvinismo</h1>
     <p>
       Aproximadamente 100 anos depois da Reforma Protestante ter explodido na
