--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <title>Os Cinco Pontos do Calvinismo</title>
+
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      type="imagex/png"
+      href="https://www.pngmart.com/files/19/Fresh-Red-Tulip-PNG-File.png"
+    />
   </head>
   <body>
     <img
@@ -118,7 +124,7 @@
     <body>
       <footer>
         <p>
-          content by
+          content extrated from
           <a
             href="https://coalizaopeloevangelho.org/article/o-que-significam-os-cinco-pontos-do-calvinismo-uma-explicacao-simples-da-tulipa/"
             >Coalizao Pelo Evangelho</a
