--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     />
   </head>
   <body>
-    <img
-      src="https://images.squarespace-cdn.com/content/v1/5d310c35b7e018000101d7cd/1566409428850-UISYA9Z6UKMX1G6PC681/17.png?format=1500w"
-      alt="Sinodo de Dort"
-    />
+    <div id="image">
+      <img
+        src="https://images.squarespace-cdn.com/content/v1/5d310c35b7e018000101d7cd/1566409428850-UISYA9Z6UKMX1G6PC681/17.png?format=1500w"
+        alt="Sinodo de Dort"
+      />
+    </div>
+
     <h1>5 Pontos do Calvinismo</h1>
     <p>
       Aproximadamente 100 anos depois da Reforma Protestante ter explodido na
@@ -123,14 +126,16 @@
     </p>
     <body>
       <footer>
-        <p>
+        <p class="footer-text">
           content extrated from
           <a
             href="https://coalizaopeloevangelho.org/article/o-que-significam-os-cinco-pontos-do-calvinismo-uma-explicacao-simples-da-tulipa/"
             >Coalizao Pelo Evangelho</a
           >
         </p>
-        <p>made by <a href="https://github.com/victorhcunha">victor</a></p>
+        <p class="footer-text">
+          made by <a href="https://github.com/victorhcunha">victor</a>
+        </p>
       </footer>
     </body>
   </body>
