--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
     />
   </head>
   <body>
-    <div id="image">
-      <img
-        src="https://images.squarespace-cdn.com/content/v1/5d310c35b7e018000101d7cd/1566409428850-UISYA9Z6UKMX1G6PC681/17.png?format=1500w"
-        alt="Sinodo de Dort"
-      />
-    </div>
-
-    <h1>5 Pontos do Calvinismo</h1>
+    <img
+      src="https://images.squarespace-cdn.com/content/v1/5d310c35b7e018000101d7cd/1566409428850-UISYA9Z6UKMX1G6PC681/17.png?format=1500w"
+      alt="Sinodo de Dort"
+    />
+    <h1>Os Cinco Pontos do Calvinismo</h1>
     <p>
       Aproximadamente 100 anos depois da Reforma Protestante ter explodido na
       Europa, em 1517, ocorreu o Sínodo de Dort na Holanda. A razão para este
