--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
+    <meta charset="UTF-8" />
     <title>Os Cinco Pontos do Calvinismo</title>
-
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
